force-app/main/default/objects/Coverage__c/Coverage__c.object-meta.xml
<CustomObject>
    <description>FHIR Coverage. A patient's insurance membership with a payer. Sharing is controlled by the parent Patient.</description>
    <label>Coverage</label>
    <nameField>
        <label>Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>