force-app/main/default/objects/Coverage__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Member Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>