force-app/main/default/objects/Coverage__c/fields/Member_ID_Identifies_Patient__c.field-meta.xml
<CustomField>
    <fullName>Member_ID_Identifies_Patient__c</fullName>
    <defaultValue>true</defaultValue>
    <description
  >Use patient identity for eligibility when the member ID uniquely identifies this patient. Clear for a dependent using the policy holder's member ID.</description>
    <label>Member ID Identifies Patient</label>
    <type>Checkbox</type>
</CustomField>