force-app/main/default/objects/Coverage__c/fields/Relationship_to_Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Relationship_to_Subscriber__c</fullName>
    <label>Relationship to Subscriber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>