force-app/main/default/objects/Coverage__c/fields/Subscriber_City__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_City__c</fullName>
    <label>Subscriber City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>