force-app/main/default/objects/Coverage__c/fields/Subscriber_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Last_Name__c</fullName>
    <label>Subscriber Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>