force-app/main/default/objects/Coverage__c/fields/Subscriber_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Postal_Code__c</fullName>
    <label>Subscriber Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>