force-app/main/default/objects/Coverage__c/fields/Subscriber_State__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_State__c</fullName>
    <label>Subscriber State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>