force-app/main/default/objects/Coverage__c/fields/Subscriber_Street__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Street__c</fullName>
    <label>Subscriber Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>