force-app/main/default/objects/Coverage__c/listViews/Active_Coverages.listView-meta.xml
<ListView>
    <fullName>Active_Coverages</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Payer__c</columns>
    <columns>Member_Id__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Effective_Start__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Coverages</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>