force-app/main/default/objects/Coverage__c/listViews/All_Coverages.listView-meta.xml
<ListView>
    <fullName>All_Coverages</fullName>
    <columns>NAME</columns>
    <columns>Patient__c</columns>
    <columns>Payer__c</columns>
    <columns>Member_Id__c</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Effective_Start__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Coverages</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>